[package]
name = "counter"
homepage.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true