[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
pebbles-game-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
pebbles-game-io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
members = [
  "io",
]

[workspace.dependencies]
gstd = "1.4.1"
gmeta = "1.4.1"
gear-wasm-builder = "1.4.1"
gtest = "1.4.1"
gclient = "1.4.1"
pebbles-game-io = {path = "io"}
tokio = "1"
xshell = "0.2"
anyhow = "1"
